# G1-Head-Control

./: README.md
head_control/: CMakeLists.txt  README.md  package.xml
head_control/config/: calib.yaml
head_control/include/head_control/: calibration_node.hpp  dynamixel_driver.hpp  head_control_node.hpp
head_control/launch/: calibration.launch.xml  head_control.launch.xml  head_full.launch.xml
head_control/src/: calibration_node.cpp  dynamixel_driver.cpp  head_control_node.cpp
head_pico_bridge/: README.md
head_pico_bridge/head_pico_bridge/: bridge_node.py  zed_pico_zmq.py
head_zmq_bridge/: README.md  package.xml  setup.cfg  setup.py
head_zmq_bridge/config/: camera.yaml
head_zmq_bridge/head_zmq_bridge/: zmq_bridge.py
head_zmq_bridge/launch/: zmq_bridge.launch.xml
