<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>head_zmq_bridge</name>
  <version>0.0.0</version>
  <description>This package will be used to bridge images from ROS 2 to ZMQ</description>
  <maintainer email="kjyothiswaroop00@gmail.com">kjyothiswaroop</maintainer>
  <license>MIT</license>

  <depend> sensor_msgs </depend>
  <depend> msgpack </depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
